@@ -1,5 +1,12 @@
 2008-09-28   <> 
 
+	* EngineManager.cs: Check if sshProgram is present on the harddisk.
+	
+	  Added hack for putty support: if sshProgram is putty.exe use -P instead
+	  of -p.
+
+2008-09-28   <> 
+
 	* EngineManager.cs: Implemented SSH tunnel support. (closes trac ticket #64)
 
 2008-07-27  Mirco Bauer <meebey@meebey.net> 
